--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,1 +1,73 @@
-<p>login works!</p>
+<div class="login-wrapper">
+  <form
+    class="login mtdj__signupform"
+    [formGroup]="userLoginForm"
+    (ngSubmit)="onSubmit()"
+  >
+    <section class="title">
+      <h3 class="welcome">Welcome back to</h3>
+      Math Dojo
+      <h5 class="hint">Login to your account</h5>
+    </section>
+    <div class="login-group">
+      <clr-input-container>
+        <label class="clr-sr-only">Email</label>
+        <input
+          type="text"
+          name="email"
+          clrInput
+          placeholder="Email"
+          formControlName="email"
+        />
+      </clr-input-container>
+      <clr-password-container>
+        <label class="clr-sr-only">Password</label>
+        <input
+          type="password"
+          name="password"
+          clrPassword
+          placeholder="Password"
+          formControlName="password"
+        />
+      </clr-password-container>
+      <div
+        class="error active"
+        [ngClass]="{ mtdj__remove_error: userLoginForm.valid }"
+      >
+        Invalid user name or password
+      </div>
+      <button
+        type="submit"
+        [disabled]="!userLoginForm.valid"
+        class="btn btn-primary"
+      >
+        Login
+      </button>
+      <div class="mtdj__social-login">
+        <div class="mtdj__social-login-label">
+          <span class="label-text">or connect with</span>
+        </div>
+        <div class="btn-group btn-link mtdj__social-login-icon">
+          <button class="btn mtdj__social-login-icon-btn">
+            <img
+              class="mtdj__social-login-icon-btn-logo"
+              src="/assets/facebook.svg"
+            />
+          </button>
+          <button class="btn mtdj__social-login-icon-btn">
+            <img
+              class="mtdj__social-login-icon-btn-logo"
+              src="/assets/google.svg"
+            />
+          </button>
+          <button class="btn mtdj__social-login-icon-btn">
+            <img
+              class="mtdj__social-login-icon-btn-logo"
+              src="/assets/github.svg"
+            />
+          </button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
