window alert added for unauthorised users

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -35,9 +35,11 @@
           </a>
         </div>
       </div>
+        <a routerLink="/practice/create"  routerLinkActive="active"  class="btn btn-primary nav-link mtdj__dashboard_create_question"> Create Question
+        </a>
     </div>
+
   </div>
-  <a routerLink="/practice/create"  routerLinkActive="active"  class="nav-link mtdj__dashboard_create_question"> Create Question
-  </a>
+
   <app-mtdg-footer></app-mtdg-footer>
 </clr-main-container>
