--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -6,7 +6,7 @@
   <nav class="subnav mtdj__practice_subnav">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard">Practice</a>
+        <a class="nav-link" routerLink="/practice">Practice</a>
       </li>
       <li class="nav-item">
         >
