--- a/src/app/components/practice/topic-page/topic-page.component.html
+++ b/src/app/components/practice/topic-page/topic-page.component.html
@@ -3,7 +3,7 @@
   <nav class="subnav mtdj__practice_subnav">
     <ul class="nav" *ngIf="topic$ | async as topic">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard">Practice</a>
+        <a class="nav-link" routerLink="/practice">Practice</a>
       </li>
       <li class="nav-item">
         >
