--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -1,6 +1,5 @@
 <clr-main-container
   class="main-container"
-  *ngIf="question$ | async as question"
 >
   <app-mtdj-header></app-mtdj-header>
   <nav class="subnav mtdj__practice_subnav">
@@ -8,20 +7,24 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/practice">Practice</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item"
+      *ngIf="question$ | async as question">
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item"
+      *ngIf="question$ | async as question">
         <a
           class="nav-link"
           [routerLink]="['/practice/topics', question.parentTopicTitle]"
           >{{ question.formattedParentTopicTitle }}</a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item"
+      *ngIf="question$ | async as question">
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item"
+      *ngIf="question$ | async as question">
         <a
           class="nav-link active"
           [routerLink]="['/practice/questions', question.title]"
@@ -30,7 +33,8 @@
       </li>
     </ul>
   </nav>
-  <div class="content-container" id="primary">
+  <div class="content-container" id="primary"
+  *ngIf="question$ | async as question">
     <div class="content-area">
       <div class="clr-row mtdj__question-feature-area">
         <div class="clr-col-lg-6 clr-col-12 mtdj__question-container">
