--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -312,29 +312,27 @@
     </div>
     <div class="clr-row mtdj__question-auth-unauthorised-warning" *ngIf="userAllowedAccess$ | async | negate">
       <div class="clr-col">
-        <span>1/3</span>
       </div>
       <div class="clr-col">
         <div class="card">
           <div class="card-header">
-              Header
+            <clr-icon shape="no-access" size="72" class="is-solid is-warning"></clr-icon>
           </div>
           <div class="card-block">
               <div class="card-title">
-                  Block
+                  You need to be a contributor to create questions.
               </div>
               <div class="card-text">
-                  ...
+                  Sorry you can't access this area yet but you can send a request to your admin instead.
               </div>
           </div>
           <div class="card-footer">
-              <button class="btn btn-sm btn-link">Footer Action 1</button>
-              <button class="btn btn-sm btn-link">Footer Action 2</button>
+              <button [clrLoading]="requestAccessBtnState" class="btn btn-primary" (click)="requestAccess()">Request Access</button>
+              <a routerLink="../">Return to practice</a>
           </div>
       </div>
       </div>
       <div class="clr-col">
-        <span>1/3</span>
       </div>
     </div>
   </div>
