--- a/src/app/components/practice/practice-home/practice-home.component.html
+++ b/src/app/components/practice/practice-home/practice-home.component.html
@@ -1,3 +1,13 @@
+<nav class="subnav mtdj__practice_subnav">
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" routerLink="/practice">Attempt Questions</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link mtdj__practice_create_question" routerLink="/practice/create">Create Question</a>
+    </li>
+  </ul>
+</nav>
 <div class="content-container" id="primary">
   <div class="content-area">
     <div
@@ -35,10 +45,3 @@
     </div>
   </div>
 </div>
-<a
-  routerLink="/practice/create"
-  routerLinkActive="active"
-  class="nav-link mtdj__practice_create_question"
->
-  Create Question
-</a>
