--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -1,3 +1,13 @@
+<nav class="subnav mtdj__practice_subnav">
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/practice">Attempt Questions</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active mtdj__practice_create_question" routerLink="/practice/create">Create Question</a>
+    </li>
+  </ul>
+</nav>
 <div class="content-container" id="primary">
   <div class="content-area">
     <div
